--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,3 +17,4 @@ jobs:
             # Relative path under $GITHUB_WORKSPACE to use as a target
             # In this example, will use $GITHUB_WORKSPACE/src as a target
             target: src
+      - run: ls -la
